stderr
ChristmasSong.java:20: error: incompatible types: StringBuilder cannot be converted to String
          return verse;
                 ^
1 error
